Amélioration SEO accessibilité changement de format des photos

--- a/page2.html
+++ b/page2.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="">
-	<meta name="description" content="">
+	<meta name="description" content="Agence de web design">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -19,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-	<title>page2</title>
+	<title>La Panthère</title>
 
 
 	<!-- Analytics -->
@@ -49,8 +48,6 @@
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="index.html">Accueil</a>
-							</li>
-							<li>
 							</li>
 							<li>
 								<a href="page2.html">page2 &gt;</a>
