--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-	<meta name="description" content="">
+	<meta name="description" content="Agence de web design">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -21,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-	<title>.</title>
+	<title>La Panthère</title>
 
 
 	<!-- Analytics -->
@@ -40,14 +38,8 @@
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
-								alt="paris web design logo agence web meilleure agence" height="40" /></a>
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web,
-							web design, illustrations, design de site web, site web, web, internet, site internet, site
-						</div>
+						<img src="img/agence-la-panthere-monochrome.svg"
+							alt="paris web design logo agence web meilleure agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -58,11 +50,6 @@
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="index.html">Accueil</a>
-							</li>
-							<li>
-							</li>
-							<li>
-								<a href="page2.html">page2 &gt;</a>
 							</li>
 						</ul>
 					</div>
@@ -79,7 +66,7 @@
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
 							alt="Agence La Panthère, agence web paris, création logo paris" />
-						<h1 class="text-center hero-bloc-text tc-white ">
+						<h1 class="text-center hero-bloc-text tc-white background">
 							Agence La Panthère
 						</h1>
 						<div class="text-center">
@@ -97,7 +84,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+						<img alt="Agence web design la Panthère" src="img/title.png" />
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -105,9 +92,9 @@
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							Web design
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
 							zéro, laissez-nous vous réaliser un design dont vous serez fier.
@@ -117,9 +104,9 @@
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							&nbsp;Stratégie
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
 							vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -129,9 +116,9 @@
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							Illustrations
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 							graphistes talentueux pour donner à vos pages une touche finale d'élégance.
@@ -140,7 +127,7 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web"
+						<img alt="Citation de Maxime Guibard sur l'agence web design La Panthère"
 							src="img/citation.png" />
 
 					</div>
@@ -165,8 +152,7 @@
 							aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous
 							ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à
 							nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
-							qui seront facilement trouvable sur les moteurs de recherche. <br><br><a
-								class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+							qui seront facilement trouvable sur les moteurs de recherche. <br><br>
 						</p>
 					</div>
 				</div>
@@ -179,15 +165,14 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+						<img alt="L'agence web la Panthère travailles avec beaucoup de clients" src="img/title2.png" />
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg"
-								alt="paris web design logo agence web meilleure agence et refonte site web journal"
+								src="img/1.webp" alt="Refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -197,10 +182,10 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.jpg" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+								src="img/2.webp" class="img-responsive portfolio-thumb"
+								alt="Création d'un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -211,10 +196,10 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								src="img/3.webp" class="img-responsive portfolio-thumb"
+								alt="Création d'un site web pour voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -224,10 +209,10 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.bmp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								src="img/4.webp" class="img-responsive portfolio-thumb"
+								alt="Création d'un site web pour agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
@@ -245,7 +230,7 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
-					<h2 class="mg-md text-center tc-white">
+					<h2 class="mg-md text-center tc-white background">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
@@ -268,30 +253,31 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="#" aria-label="twitter"><span
+											class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="#" aria-label="facebook"><span
+											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="#" aria-label="dribbble"><span
+											class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
+									<a class="social" href="#" aria-label="instagram"><span
 											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-								illustrations, design de site web, site web, web, internet, site internet, site</div>
 						</div>
 						<div class="row">
-							<div class="col-sm-4">
+							<div class="col-sm-4 blanc">
 								Partenaires
 								<ul>
 									<li><a href="voiture.com">voiture.com</a></li>
@@ -300,7 +286,7 @@
 									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
 								</ul>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-4 blanc">
 								Annuaires liste 1
 								<ul>
 									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
@@ -314,7 +300,7 @@
 									<li><a href="listeseo.com">listeseo.com</a></li>
 								</ul>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-4 blanc">
 								Annuaires liste 2
 								<ul>
 									<li><a href="betterseo.com">betterseo.com</a></li>
