--- a/page2.html
+++ b/page2.html
@@ -36,7 +36,7 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" />
+						<img src="img/agence-la-panthere-monochrome.webp" alt="atlanta web design logo" height="40" />
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
