contraste titre / seo format mobile

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 								nos
 								ventes en ligne à lyon"
 							</p>
-							<p class="auteur">Maxime Guibard, PDG de A vos fourchettes</p>
+							<p class="auteur">Maxime Guibard, PDG de À vos fourchettes</p>
 						</div>
 					</div>
 				</div>
